--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
     {
-      "name": "my-frontend-app",
+      "name": "first-portfolio",
       "version": "1.0.0",
       "scripts": {
         "build": "react-scripts build" 
